<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_home"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="59dp"
            android:text="@string/login_title_text" />


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/edit_text_username_hint"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:hint="@string/edit_text_password_hint"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBoxShowPassword"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_text" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signInButton"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_button_text" />

            <View android:layout_width="50dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/resetPassword"
            android:layout_gravity="center"
            android:textColorLink="@color/black"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/reset_password_text" />



    </androidx.appcompat.widget.LinearLayoutCompat>



</FrameLayout>